# snake_bevy

./: Cargo.toml  LICENSE  README.md
assets/themes/: ui_pale.json
src/: main.rs
src/actions/: hud.rs  mod.rs
src/app_state/: mod.rs
src/buttons/: choice.rs  components.rs  mod.rs  resources.rs  simple.rs  systems.rs  toggle.rs
src/camera/: mod.rs
src/food/: mod.rs
src/game_loop/: mod.rs
src/grid/: components.rs  mod.rs  resources.rs  systems.rs
src/rng/: mod.rs
src/scene/: mod.rs
src/snake/: components.rs  factory.rs  mod.rs  systems.rs
src/themes/: color_definition.rs  mod.rs
src/ui/: components.rs  elements.rs  mod.rs  ui_state.rs
src/ui/view/: game_over.rs  menu.rs  mod.rs  play.rs
